Ext4 Migration: Pass the actual minimum battery level to start migration to UI.

The minimum battery level was reduced from 30% to 10%, but the message in the
migration UI did not catch up with the change.
The minimum level should be passed to the UI instead of using fixed value.

Bug: 763370
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I3c20423ac0ff47b49c6e6b9a73effef076741a0f
Reviewed-on: https://chromium-review.googlesource.com/657777
Commit-Queue: Naoki Fukino <fukino@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Pavol Marko <pmarko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#500855}
Former-commit-id: 4a0a2f1cea01e9f212e75b3d32f8469be70ad54d